# difx_tests

./: CMakeLists.txt  FindIPP.cmake  allocDataHost.c  allocDataHost.h  gkernel.cu  gkernel.cuh  kernel.c  kernel.h  main.c  main_gpu.cu  openFiles.c  openFiles.h
